<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="95dp"
        android:background="@drawable/logo_lemonnier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rectangleRoseParametres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rectangle_rose"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titrenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/numDeTel"
            android:textColor="@color/bleuciel"
            android:textSize="27sp"
            app:layout_constraintTop_toTopOf="@id/rectangleRoseParametres" />

        <EditText
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votreNumDeTel"
            android:textColorHint="@color/bleuciel"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/titrenum" />

        <TextView
            android:id="@+id/titreadresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/adresseBDD"
            android:textColor="@color/bleuciel"
            android:textSize="27sp"
            app:layout_constraintTop_toBottomOf="@id/num" />

        <EditText
            android:id="@+id/ipserver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entrezAdresseBDD"
            android:textColorHint="@color/bleuciel"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/titreadresse" />

        <Button
            android:id="@+id/buttonsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_rose"
            android:fontFamily="@font/baloo"
            android:text="@string/sauvegarder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipserver" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>