<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleuciel">

    <Spinner
        android:id="@+id/spinner_lieux"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_spinner"
        android:dropDownVerticalOffset="45dp"
        android:gravity="center"
        android:maxHeight="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_categorie"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_spinner"
        android:dropDownVerticalOffset="45dp"
        android:entries="@array/Categories"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cadre"
        android:layout_width="130dp"
        android:layout_height="160dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/cadre_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cadre_photo"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_connexion_"
        app:layout_constraintLeft_toLeftOf="@id/cadre"
        app:layout_constraintTop_toTopOf="@id/cadre" />


    <ImageView
        android:id="@+id/img_ajt_photo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/add_a_photo"
        app:layout_constraintStart_toStartOf="@+id/cadre_photo"
        app:layout_constraintTop_toTopOf="@id/cadre_photo" />

    <View
        android:id="@+id/titreListeIncidents"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/entourage_titre_liste_incidents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/baloo"
        android:text="@string/Desctiption"
        android:textColor="@color/turquoise"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/titreListeIncidents" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_liste_incidents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titreListeIncidents"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/EditTextCommentaire"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_description"
            android:gravity="top"
            android:hint="Decrivez l'incident en quelques lignes..."
            android:padding="10dp"
            android:textColor="@color/noir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_envoyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/rose"
            android:fontFamily="@font/baloo"
            android:text="@string/Envoyer"
            android:textAllCaps="false"
            android:textColor="@color/bleuciel"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Switch
        android:id="@+id/switch_localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/utiliser_la_localisation"
        app:layout_constraintEnd_toEndOf="@id/spinner_categorie"
        app:layout_constraintTop_toBottomOf="@id/spinner_categorie"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</androidx.constraintlayout.widget.ConstraintLayout>